--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,124 @@ code {
 @import url("./blocks/popup/__large-image/popup__large-image.css");
 @import url("./blocks/popup/__caption-image/popup__caption-image.css");
 
+
+/****************************/
+
+.auth {
+  max-width: 360px;
+  padding: 40px 0 0;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  /* background-color: #333; */
+}
+
+.auth__header {
+  font-size: 24px;
+  line-height: 1.2;
+  font-weight: 900;
+  text-align: center;
+}
+
+/* .auth__form {
+  background-color: #444;
+} */
+
+.auth__input {
+  width: 100%;
+  padding: 5px 0 10px;
+  margin: 0;
+  border: 0;
+  border-bottom: 2px solid #ccc;
+  background-color: #000; /* transparent */
+  color: #ccc;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.2;
+}
+
+.auth__input:focus {
+  outline: none;
+}
+
+.auth__error {
+  color: #FF0000;
+  font-size: 12px;
+  line-height: 1;
+  padding: 4px 0 0;
+  min-height: 28px;
+  display: block;
+}
+
+.auth__button {
+  box-sizing: border-box;
+  width: 100%;
+  border: 1px solid #fff;
+  border-radius: 2px;
+  background-color: #fff;
+  color: #000;
+  margin: 180px 0 0;
+  padding: 15px 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.22;
+  text-align: center;
+  cursor: pointer;
+  transition: opacity 0.1s linear 0s;
+}
+
+.auth__button:hover {
+  opacity: 0.85;
+}
+
+.auth__reminder {
+  margin: 15px 0 0;
+  color: #fff;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.2;
+  width: 100%;
+  text-align: center;
+}
+
+.auth__caption{
+  margin: 0;
+  display: inline;
+}
+.auth__link {
+  color: #fff;
+  text-decoration: none;
+  opacity: 1;
+  transition: opacity 0.1s linear 0s;
+}
+.auth__link:hover {
+  opacity: 0.6;
+}
+
+/********************************/
+
+.popup__container_info {
+  /* min-height: 330px; */
+}
+
+.info-tooltip {
+  background-repeat: no-repeat;
+  background-size: 120px 120px;
+  background-position: top center;
+  margin: 24px 0;
+  padding: 152px 0 0;
+  text-align: center;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 1.2;
+}
+.info-tooltip__succeed {
+  background-image: url('./images/icon-succeed.svg');
+}
+.info-tooltip__fail {
+  background-image: url('./images/icon-fail.svg');
+}
+
+
+/********************************/
